--- a/it4women/index.html
+++ b/it4women/index.html
@@ -590,6 +590,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p><a href="projects/project-home/index-1.html"><b>Downloading Your Website Template</a></b></p>
 	<p><a href="projects/project-home/index-2.html"><b>Updating your Website Content</a></b></p>
 	<p><a href="projects/project-home/index-3.html"><b>Updating your Website Colours</a></b></p>
+	<p><a href="projects/project-home/index-4.html"><b>Updating your Website Images and Videos</a></b></p>
 </section>
 
 
