--- a/it4women/projects/final/project-home/index.html
+++ b/it4women/projects/final/project-home/index.html
@@ -6,7 +6,7 @@
     <title>Mary Smith | Web UI/UX Designer | Home Page</title>
     <meta name="description" content="I create digital experiences to promote products, services and events.">
 
-    <link rel="preload" href="assets/videos/hero-video-poster.jpg" as="image"> 
+    <link rel="preload" href="assets/videos/hero-home.jpg" as="image"> 
 
 
     <!-- Bootstrap CSS -->
@@ -81,7 +81,7 @@
     <div class="container-fluid hero-block hero-10">
     
         <!-- Background video --->
-        <video loop muted autoplay playsinline poster="assets/videos/hero-video-poster.jpg" class="background-video" id="bg-video">
+        <video loop muted autoplay playsinline poster="assets/videos/hero-home.jpg" class="background-video" id="bg-video">
             <source src="assets/videos/home-video.mp4" type="video/mp4">
         </video>
     
