--- a/it4women/projects/project-home/index-4.html
+++ b/it4women/projects/project-home/index-4.html
@@ -296,7 +296,7 @@
 
 
 	<h3 id="preload">Preloading the poster image</h3>
-	<p>There is one further step you can take to ensure the poster image loads as quickly as possible on your users' device.</p>
+	<p>There is one further step you can take to ensure the poster image loads as quickly as possible on your user's device.</p>
 
 	<p>In VS Code, add the following line in the <span class="syn">head</span> section, just under the <span class="syn">description</span> meta tag.</p>
 
@@ -308,6 +308,8 @@
 	<img src="assets/img/hero-vid-7.png" alt="project in web browser">
 
 	<p>Replace the file name <b>hero-video-poster.jpg</b> with whatever is the name of the poster image on your 'home' page.</p>
+
+	<p>Also ensure you have set the <i>correct sub-folder location</i> for the poster imege &#8211; on your website, you might have placed the image in either the <b>assets/img</b> or <b>assets/videos</b> sub-folder.</p>
 </section>
 
 
