--- a/it4women/projects/project-home/index-4.html
+++ b/it4women/projects/project-home/index-4.html
@@ -342,6 +342,7 @@
 
 <p>Ensure that both the poster <i>file name</i> and poster <i>sub-folder file location</i> are correct for <i>your</i> website.</p>
 
+<p>NOTE: On Apple mobiles and tablets, a background video will play only if the user has not turned on battery-saving, lower-power mode. If battery-saving is on, the user will see only the poster image and never the background video.</p>
 
 </section>
 
