--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -83,7 +83,7 @@
 <section id="introduction" class="wrapper-content bg-white">
 	<h2>Introduction</h2>
 
-	<p>In this project you will create your personal website, based on sample website templates. Yout website will have the following six web pages:</p>
+	<p>In this project you will create your personal website, based on sample website templates. Your website will have the following six web pages:</p>
 	<ul>
 		<li><b>Home page</b> and <b>Privacy page</b> (in main folder)</li>
 		<li><b>Portfolio page</b> (in <b>/portfolio</b> sub-folder)</li>
@@ -93,7 +93,7 @@
 	</ul>
 	<p>A single stylesheet named <b>global.css</b> will control the appearance of all the above web pages.</p>
 
-	<p>You can display a sample finished version of the website by clicking the image or text link below. The finished sample website will open in a new tab of your web browser</p>
+	<p>You can display a sample finished version of the website by clicking the image or text link below. The finished sample website will open in a new tab of your web browser.</p>
 
 	<a href="../final/project-home/index.html" target="_blank"><img src="assets/img/final-home.png" style="max-width: 600px" alt="sample image"></a>
 
@@ -170,7 +170,7 @@
 <section id="project-folders" class="wrapper-content bg-white">
 
 	<h2>Creating your website sub-folders</h2>
-	<p>Your first step is to create the sub-folders that will store the your web pages and other resources used by those various pages of your personal portfolio website.</p>
+	<p>Your first step is to create the sub-folders that will store the web pages and other resources used by those various pages of your personal portfolio website.</p>
 	<ol>
 
 		<li>Inside your 'main' <b>websites</b> folder, create the following sub-folders (if they do not already exist):
