--- a/it4women/projects/project-home/index-javascript.html
+++ b/it4women/projects/project-home/index-javascript.html
@@ -220,8 +220,19 @@
 		<li>In the hero block section, update the <span class="syn">&lt;h2&gt;</span> sub-heading from just "JavaScript" to "JavaScript Coding".</li>
 		
 		<li>Directly under the hero block section is a <span class="syn">&lt;div&gt;</span> block with the two class names of <span class="syn">container introduction-text</span>.
-		<span class="inside-ol">&nbsp;</span>
+
+		<img src="assets/img/js-replace.png" alt="sample image">
+
 		Replace its content with the following heading and text.
+<pre class="language-html" style="color:#fff">
+&lt;h1&gt;Some sample JavaScript&lt;/h1&gt;
+&lt;p&gt;Today, almost every one of the world&#8217;s 1.7 billion websites uses a programming language creating in &lt;a target="_blank" class="fancy-link" href="https://thenewstack.io/brendan-eich-on-creating-javascript-in-10-days-and-what-hed-do-differently-today/"&gt;ten days&lt;/a&gt; back in 1995. Check out my fun JavaScript coding samples below.&lt;/p&gt;    
+</pre></li>
+
+		<li>Directly under this introduction block, and above the footer section, click and press the <b>Enter</b> key a few times to open up some blank lines.
+		<span class="inside-ol">&nbsp;</span></li>
+		In this empty space, copy-and-paste the following.
+		
 <pre class="language-html" style="color:#fff">
 &lt;div class="wrapper-yellow"&gt;
    &lt;div class="container col-md-8 offset-md-2"&gt;
