--- a/it4women/projects/project-home/index-javascript.html
+++ b/it4women/projects/project-home/index-javascript.html
@@ -202,7 +202,7 @@
 		The last lines of your web page should now look as shown below.
 		<img src="assets/img/js-last-lines.png" alt="sample image"></li>
 
-		<li>Save your <b>index.html</b> file, but do not close. You will next need to update its content.</li>
+		<li>Save your <b>index.html</b> file, but do not close it. You will next need to update its content.</li>
 </ol>
 
 </section>
