--- a/it4women/projects/project-home/index-portfolio.html
+++ b/it4women/projects/project-home/index-portfolio.html
@@ -80,7 +80,7 @@
 <section id="introduction" class="wrapper-content bg-white">
 	<h2>Introduction</h2>
 
-	<p>In this Tutorial you will add two completed projects to your website, and update your Portfolio web page accordingly.</p>
+	<p>In this Tutorial you will add two completed projects to your website, and update your Portfolio and Home web pages accordingly.</p>
 
 </section>
 
@@ -94,7 +94,9 @@
 	<ol>
 		<li>Download the following compressed file to your computer:
 		<span class="inside-ol">&nbsp;</span>
-		<a href="two-projects.zip">two-projects.zip</a></li>
+		<a href="two-projects.zip">two-projects.zip</a>
+		<span class="inside-ol">&nbsp;</span>
+		This is large file which contains a video. So it may take a few minutes to download.</li>
 
 		<li>Copy the ZIP file into your <b>websites/portfolio</b> folder.</li>
 
