--- a/it4women/projects/project-home/index-portfolio.html
+++ b/it4women/projects/project-home/index-portfolio.html
@@ -96,7 +96,7 @@
 		<span class="inside-ol">&nbsp;</span>
 		<a href="two-projects.zip">two-projects.zip</a>
 		<span class="inside-ol">&nbsp;</span>
-		This is large file which contains a video. So it may take a few minutes to download.</li>
+		This is a large file 12MB which contains a video. So it may take a few minutes to download.</li>
 
 		<li>Copy the ZIP file into your <b>websites/portfolio</b> folder.</li>
 
