--- a/it4women/index.html
+++ b/it4women/index.html
@@ -441,129 +441,45 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
-<section class="container-wide">
+<div class="bg-section-light" style="padding-bottom: 20px">
 
-	<h2>Working with Wordpress</h2>
+	<section class="container-wide">
 
-	<div class="flex-grid">
+		<h2>Working with WordPress</h2>
 
-		<div class="item-3">
-			<p><a href="wordpress/wp-intro.html" style="font-size:18px"><b>1: Introduction</b></a></p>
+		<div class="flex-grid">
+
+			<div class="item-3">
+				<p><a href="wordpress/wp-intro.html" style="font-size:18px"><b>1: Introduction</b></a></p>
+			</div>
+
+			<div class="item-3">
+				<p><a href="wordpress/wp-publish.html" style="font-size:18px"><b>2: Publishing</b></a></p>
+			</div>
+
+			<div class="item-3">
+				<p><a href="wordpress/wp-themes.html" style="font-size:18px"><b>3: Themes</b></a></p>
+			</div>
 		</div>
 
-		<div class="item-3">
-			<p><a href="wordpress/wp-publish.html" style="font-size:18px"><b>2: Publishing</b></a></p>
-		</div>
+		<div class="flex-grid">
 
+			<div class="item-3">
+				<p><a href="wordpress/wp-plugins.html" style="font-size:18px"><b>4: Plugins</b></a></p>
+			</div>
 
-		<div class="item-3">
-			<p><a href="wordpress/wp-themes.html" style="font-size:18px"><b>3: Themes</b></a></p>
-		</div>
+			<div class="item-3"><p>&nbsp;</p></div>
+		</div><!--- /flex-grid -->
 	</div>
-
-	<div class="flex-grid">
-
-		<div class="item-3">
-			<p><a href="wordpress/wp-plugins.html" style="font-size:18px"><b>4: Plugins</b></a></p>
-		</div>
-
-		<div class="item-3"><p>&nbsp;</p></div>
-
-	</div><!--- /flex-grid -->
-
 </section>
 </div>
 
 
+<section class="container-wide-padding" style="background-color: #fff">
 
-
-<!--
-<section class="container-wide">
-
-	<h2>Hyperlinks, Buttons and Icons</h2>
-
+	<h2>Digital Marketing</h2>
 
 	<div class="flex-grid">
-
-		<div class="item-3">
-			<a href="exercises/hyperlinks-intro.html">
-				<img src="assets/img/toc-hyperlinks-intro.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/hyperlinks-intro.html">Introduction to Hyperlinks</a></h3>
-			<p>Understanding the difference between absolute and relative hyperlinks, and adding hyperlinks to sample web pages.</p>
-			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-intro.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
-		</div>
-
-		<div class="item-3">
-			<a href="exercises/hyperlinks-styling.html">
-				<img src="assets/img/toc-hyperlinks-styles.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/hyperlinks-styling.html">Styling Hyperlinks with CSS</a></h3>
-			<p>Applying CSS style rules such as text colours, borders and transitions to the five hyperlink states: link, visited, focus, hover and active.</p>
-			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-styling.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-
-
-		<div class="item-3">
-			 <a href="exercises/hyperlinks-internal.html">
-				<img src="assets/img/toc-hyperlinks-internal.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/hyperlinks-internal.html">Working with Internal Hyperlinks</a></h3>
-			<p>Creating a Wikipedia-style web page navigation system with a smooth-scrolling visual effect.</p>
-			<a class="btn-solid btn-rounded" href="exercises/hyperlinks-internal.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-	</div>
-
-	<div class="flex-grid">
-		<div class="item-3">
-			 <a href="exercises/intro-bootstrap.html">
-				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/intro-bootstrap.html">Intro to Bootstrap</a></h3>
-			<p>At the end of this Tutorial you will be able to create a basic Bootstrap web page.</p>
-			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-
-		<div class="item-3">
-			 <a href="exercises/intro-bootstrap-grid.html">
-				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/intro-bootstrap-grid.html">Bootstrap Grid</a></h3>
-			<p>Create and use responsive one, two, three and four-column grids with Bootstrap.</p>
-			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-grid.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-
-		<div class="item-3">
-			 <a href="projects/project-smoothies.html">
-				<img src="assets/img/toc-html.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="projects/project-smoothies.htmls">Bootstrap Project</a></h3>
-			<p>Create and use responsive one, two, three and four-column grids with Bootstrap.</p>
-			<a class="btn-solid btn-rounded" href="projects/project-smoothies.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
-		</div>
-
-
-</section>
-
--->
-
-<section class="container-wide-padding">
-
-	<h2>Web Design Projects</h2>
-
-	<div class="flex-grid">
-
-
-		<div class="item-3">
-			<a href="projects/project-van-gogh/index.html">
-				<img src="assets/img/project-van-gogh.png" class="img-shadow" alt="Project: Web Agency"></a>
-		    <h3><a href="projects/project-van-gogh/index.html">Vincent van Gogh</a></h3>
-		    <p>A single-page website about Dutch artist Vincent van Gogh with an embedded and responsive video from YouTube.</p>
-		    <a href="projects/project-van-gogh/index.html" class="button-solid">View Project<i class="fas fa-arrow-right"></i></a>		  
-		</div>
-
-
 
 		<div class="item-3">
 			<a href="https://www.munnelly.com/webdesign/exercises/setting-up-google-analytics.html">
@@ -576,12 +492,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<div class="item-3">&nbsp;
 		</div>
+		<div class="item-3">&nbsp;
+		</div>
 
 
 	</div><!-- End parent flexbox container -->
 </section>
 
-<p>&nbsp;</p>
 
 <section class="block-content bg-white" style="background: #ffe7d9">
 	<h2>Building your Personal Portfolio Website</h2>
@@ -591,6 +508,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p><a href="projects/project-home/index-2.html"><b>Updating your Website Content</a></b></p>
 	<p><a href="projects/project-home/index-3.html"><b>Updating your Website Colours</a></b></p>
 	<p><a href="projects/project-home/index-4.html"><b>Updating your Website Images and Videos</a></b></p>
+	<p><a href="projects/project-home/index-portfolio.html"><b>Updating your Portfolio Web Page</a></b></p>
 	<p><a href="projects/project-home/index-javascript.html"><b>Updating your JavaScript Web Page</a></b></p>
 </section>
 
