--- a/it4women/bilyana2/javascript/index.html
+++ b/it4women/bilyana2/javascript/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilyana Marinova | Web UI/UX Designer | WordPress</title>
-    <meta name="description" content="Check out some examples of my work with WordPress">
+    <title>Bilyana Marinova | Web UI/UX Designer | JavaScript</title>
+    <meta name="description" content="Check out some examples of my work with Javascript">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">    
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img//favicon-32x32.png">   
@@ -79,8 +79,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                    <li class="nav-item"><a class="nav-link" href="../portfolio/">Portfolio</a></li>
-                   <li class="nav-item"><a class="nav-link" href="../javascript/">JavaScript</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">WordPress</a></li>
+                   <li class="nav-item"><a class="nav-link" href="#">JavaScript</a></li>
+                  <li class="nav-item"><a class="nav-link" href="../contact/">WordPress</a></li>
                   <li class="nav-item"><a class="nav-link" href="http://dabigbang.000webhostapp.com/">My Blog</a></li>
 
   
