--- a/it4women/bilyana2/javascript/index.html
+++ b/it4women/bilyana2/javascript/index.html
@@ -80,13 +80,13 @@
                 <ul class="navbar-nav ml-auto">
                    <li class="nav-item"><a class="nav-link" href="../portfolio/">Portfolio</a></li>
                    <li class="nav-item"><a class="nav-link" href="#">JavaScript</a></li>
-                  <li class="nav-item"><a class="nav-link" href="../contact/">WordPress</a></li>
+                  <li class="nav-item"><a class="nav-link" href="../wordpress/">WordPress</a></li>
                   <li class="nav-item"><a class="nav-link" href="http://dabigbang.000webhostapp.com/">My Blog</a></li>
 
   
                     <!-- Call to action button-->
                     <li class="nav-item">
-                        <a class="btn btn-outline-danger" href="contact/" role="button">
+                        <a class="btn btn-outline-danger" href="../contact" role="button">
                             <i class="far fa-envelope"></i> &nbsp;Hire me!
                         </a>
                     </li>
