--- a/it4women/bilyana2/contact/index.html
+++ b/it4women/bilyana2/contact/index.html
@@ -63,14 +63,14 @@
       <!-- Begin menu options -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-             <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+             <li class="nav-item"><a class="nav-link" href="../portfolio">Portfolio</a></li>
              <li class="nav-item"><a class="nav-link" href="../javascript/">JavaScript</a></li>
             <li class="nav-item"><a class="nav-link" href="../wordpress/">WordPress</a></li>
             <li class="nav-item"><a class="nav-link" href="http://dabigbang.000webhostapp.com/">My Blog</a></li>
 
                 <!-- Call to action button-->
               <li class="nav-item">
-                  <a class="btn btn-outline-danger" href="contact/" role="button">
+                  <a class="btn btn-outline-danger" href="#" role="button">
                       <i class="far fa-envelope"></i> &nbsp;Hire me!
                   </a>
               </li>
