--- a/it4women/bilyana2/portfolio/index.html
+++ b/it4women/bilyana2/portfolio/index.html
@@ -87,7 +87,7 @@
 
                       <!-- Call to action button-->
                     <li class="nav-item">
-                        <a class="btn btn-outline-danger" href="contact/" role="button">
+                        <a class="btn btn-outline-danger" href="../contact/" role="button">
                             <i class="far fa-envelope"></i> &nbsp;Hire me!
                         </a>
                     </li>
@@ -105,7 +105,7 @@
         <!-- Buttons start here -->
         <div class="row">
             <div class="col-md-6 col-xs-12 text-right">
-                <a class="btn btn-danger btn-lg" href="../portfolio" role="button"><i class="fas fa-pencil-ruler"></i> &nbsp;&nbsp;Portfolio</a>
+                <a class="btn btn-danger btn-lg" href="#" role="button"><i class="fas fa-pencil-ruler"></i> &nbsp;&nbsp;Portfolio</a>
             </div>	
             <div class="col-md-6 col-xs-12">
                 <a class="btn btn-danger btn-lg" href="../contact" role="button"><i class="far fa-envelope"></i> &nbsp;&nbsp;Let's chat</a>
@@ -127,7 +127,7 @@
 
         <ul class="footer-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../portfolio/">Portfolio</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li><a href="../contact/">Contact</a></li>
         </ul>
         
