--- a/it4women/bilyana2/wordpress/index.html
+++ b/it4women/bilyana2/wordpress/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilyana Marinova | Web UI/UX Designer | WordPress</title>
-    <meta name="description" content="Check out some examples of my work with WordPress">
+    <meta name="description" content="Check out some examples of my work with WordPress.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">    
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img//favicon-32x32.png">   
@@ -86,7 +86,7 @@
   
                     <!-- Call to action button-->
                     <li class="nav-item">
-                        <a class="btn btn-outline-danger" href="contact/" role="button">
+                        <a class="btn btn-outline-danger" href="../contact/" role="button">
                             <i class="far fa-envelope"></i> &nbsp;Hire me!
                         </a>
                     </li>
