--- a/it4women/databases/2-database-queries.html
+++ b/it4women/databases/2-database-queries.html
@@ -132,7 +132,7 @@ SELECT * from customers;
 
 	<p>In summary, the general form of a wildcard <span class="syn">SELECT</span> statement in SQL looks as follows:</p>
 <pre class="language-html">
->SELECT * FROM table_name;
+SELECT * FROM table_name;
 </pre>
 
 </section>
