--- a/it4women/index.html
+++ b/it4women/index.html
@@ -406,6 +406,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 </div>
 
+
+
 <section class="container-wide">
 
 	<h2>Working with JavaScript</h2>
@@ -419,7 +421,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="item-3">
 			<p><a href="js-new/2-objects-properties-methods.html" style="font-size:18px"><b>2: Objects, Properties and Methods</b></a></p>
 		</div>
-
 
 		<div class="item-3">
 			<p><a href="js-new/3-variables-operators.html" style="font-size:18px"><b>3: Variables and Operators</b></a></p>
@@ -441,7 +442,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-<div class="bg-section-light" style="padding-bottom: 20px">
+
+<div class="bg-section-light" style="padding-top:40px; padding-bottom: 20px">
 
 	<section class="container-wide">
 
@@ -465,17 +467,46 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="flex-grid">
 
 			<div class="item-3">
-				<p><a href="wordpress/wp-plugins.html" style="font-size:18px"><b>4: Plugins</b></a></p>
+			<p><a href="wordpress/wp-plugins.html" style="font-size:18px"><b>4: Plugins</b></a></p>
 			</div>
 
+			<div class="item-3"><p>&nbsp;</p></div>
 			<div class="item-3"><p>&nbsp;</p></div>
 		</div><!--- /flex-grid -->
 	</div>
 </section>
-</div>
 
 
-<section class="container-wide-padding" style="background-color: #fff">
+
+
+
+
+
+	<section class="container-wide" style="padding-top:40px">
+
+		<h2>Working with SQL</h2>
+
+		<div class="flex-grid">
+
+			<div class="item-3">
+				<p><a href="databases/1-intro-sql.html" style="font-size:18px"><b>1: Introduction to SQL</b></a></p>
+			</div>
+
+			<div class="item-3">
+				<p><a href="databases/2-database-queries.html" style="font-size:18px"><b>2: Database Queries</b></a></p>
+			</div>
+
+			<div class="item-3"><p>&nbsp;</p>
+			</div>
+
+		</div><!--- /flex-grid -->
+	</div>
+</section>
+
+
+
+<div class="bg-section-light">
+<section class="container-wide-padding">
 
 	<h2>Digital Marketing</h2>
 
@@ -498,6 +529,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	</div><!-- End parent flexbox container -->
 </section>
+</div>
 
 
 <section class="block-content bg-white" style="background: #ffe7d9">
