--- a/it4women/wordpress/wp-intro.html
+++ b/it4women/wordpress/wp-intro.html
@@ -39,7 +39,7 @@
 
 	<p>WordPress is the most widely-used Content Management System (CMS) in the world that powers over 75 million websites.</p>
 
-	<p>a CMS enables non-technical users to create, modify and publish digital content. In most cases, it also multiple users to work in collaboration.</p>
+	<p>A CMS enables non-technical users to create, modify and publish digital content. In most cases, it also multiple users to work in collaboration.</p>
 
 
 	<p>WordPress has a huge user community with dedicated forums and discussions all over the internet. The amount of data that is available and thousands of WordPress tutorials also make WordPress one of the easiest to use content management systems.</p>
