--- a/it4women/js-new/1-first-scripts.html
+++ b/it4women/js-new/1-first-scripts.html
@@ -202,7 +202,7 @@ document.write(&quot;Hello. This is my very first script.&quot;);
 
 <p class=defhead0>String</p>
 
-<p class=deftext0>One or more alphabetic, numeric of punctuation characters, or white (blank) spaces enclosed within single or double quotes.</p>
+<p class=deftext0>One or more letters, numbers, symbols, punctuation characters or blank spaces, enclosed within a pair of quotes. Generally, double (" ") rather than single (' ') quotes are used to enclose a string.</p>
 
 
 <p>You can join two or more strings together so that they display as a single string in the web browser window. String joining is achieved with the plus (<b>+</b>) operator, and is known as <i>concatenation</i>. Consider the following script.</p>
