--- a/it4women/js-new/2-objects-properties-methods.html
+++ b/it4women/js-new/2-objects-properties-methods.html
@@ -268,7 +268,7 @@ objectname.propertyname
 
 	<img src="assets/img/objects-properties-methods/ex-2-2n.png" alt="Javascript">
 
-	<p>Leave the <b>exercise-2-1.html</b> file open in VS Code and your web browser. You will make one more updates to it.</p>
+	<p>Leave the <b>exercise-2-1.html</b> file open in VS Code and your web browser. You will make one more update to it.</p>
 
 </section>
 
@@ -310,7 +310,7 @@ objectname.propertyname
 
 	<p>Let's use these properties to display details of your <b>exercise 2-1.html</b> web page.</p>
 
-	<p>In VS Code, in your <b>exercise-2-1.html</b> file. you can see a third <span class="syn">&lt;h3&gt;</span> heading of "Web page in window of web browser".</p>
+	<p>In VS Code, in your <b>exercise-2-1.html</b> file. You can see a third <span class="syn">&lt;h3&gt;</span> heading of "Web page in window of web browser".</p>
 	
 	<p>Under this heading is an empty pair of opening and closing <span class="syn">&lt;script&gt;</span> ... <span class="syn">&lt;/script&gt;</span> tags.</p>
 	
