--- a/it4women/js-new/3-variables-operators.html
+++ b/it4women/js-new/3-variables-operators.html
@@ -128,7 +128,7 @@
 
 	<img src="assets/img/variables-operators/first-name.png" alt="Javascript">
 
-	<p>The value entered might be 'Mary' or 'John' or whatever. But in the JavaScript code that stores the value, the variable will always have the same name of,for example, userSurname.</p>
+	<p>The value entered might be 'Mary' or 'John' or whatever. But in the JavaScript code that stores the value, the variable will always have the same name of, for example, userSurname.</p>
 
 	<p>In JavaScript the first thing you do with a variable is <i>declare</i> it. The following code declares the variable named FirstName.</p>
 
@@ -215,7 +215,7 @@ let PhoneNumber = "045 45773758752";
 
 	<h3 id="numeric-variables">About numeric variables</h3>
 
-	<p>Another type of variable in JavaScript is the <i>numeric variable</i>, which hold a number that you can perform arithmetic operations on</p>
+	<p>Another type of variable in JavaScript is the <i>numeric variable</i>, which stores a number that you can perform arithmetic operations on</p>
 
 	<p>When you omit the quotes around the value, JavaScript makes the variable a numeric variable. For example.</p>
 
@@ -472,7 +472,7 @@ SalePrice = SalePrice + 20;
 
 <p class=defhead0>Assignment statement</p>
 
-<p class=deftext0>A JavaScript statement in which a variable of object property on the left of the equal sign (=) is given the value of 
+<p class=deftext0>A JavaScript statement in which a variable or object property on the left of the equal sign (=) is given the value of 
 whatever is on the right of the equals sign.</p>
 
 <h2 id="variable-retyping">Automatic variable retyping</h2>
